--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "microblog",
-  "version": "1.0.0",
+  "name": "microblog-express4-refactor",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.15.1",
-    "connect-mongo": "^1.3.2",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "ejs": "~2.4.1",
-    "express": "~4.13.4",
-    "mongodb": "^2.2.5",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "ejs": "~2.6.1",
+    "express": "~4.16.1",
+    "express-partials": "^0.3.0",
+    "express-session": "^1.17.3",
+    "http-errors": "~1.6.3",
+    "less-middleware": "~2.2.1",
+    "mongodb": "^4.9.0",
+    "morgan": "~1.9.1"
   }
 }
